[gd_scene load_steps=5 format=3 uid="uid://owscnbdnmsbp"]

[ext_resource type="Script" uid="uid://dqvi8fbpi6c3m" path="res://addons/Ds_levels/ui/tabs/level_data_editor/level_data_inspector.gd" id="1_6lqfa"]
[ext_resource type="PackedScene" uid="uid://dvd6im2at4f60" path="res://addons/Ds_levels/ui/file_pickers/file_picker.tscn" id="1_gbbwo"]
[ext_resource type="PackedScene" uid="uid://dyyh6xdbtv64o" path="res://addons/Ds_levels/ui/tabs/level_data_editor/level_preview_viewer.tscn" id="2_6fvj7"]
[ext_resource type="PackedScene" uid="uid://c1n1eoykc148g" path="res://addons/Ds_levels/ui/file_pickers/texture_file_picker.tscn" id="2_6lqfa"]

[node name="level_data_inspector" type="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
offset_right = 300.0
offset_bottom = 324.0
script = ExtResource("1_6lqfa")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="save_button" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"
flat = true

[node name="reset_button" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "Reset"
flat = true

[node name="clear_button" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear"
flat = true

[node name="set_default_button" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Set Start Level"
flat = true

[node name="Panel2" type="Panel" parent="."]
self_modulate = Color(0.82606, 0.82606, 0.82606, 1)
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel2"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="ScrollContainer" type="ScrollContainer" parent="Panel2/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="level_preview_viewer" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_6fvj7")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(0.791999, 0.791999, 0.791999, 1)
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Label"
clip_text = true
text_overrun_behavior = 3

[node name="level_label_input" type="LineEdit" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
self_modulate = Color(0.791999, 0.791999, 0.791999, 1)
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Description"
clip_text = true
text_overrun_behavior = 3

[node name="level_description_input" type="LineEdit" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
self_modulate = Color(0.791999, 0.791999, 0.791999, 1)
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Path"
clip_text = true
text_overrun_behavior = 3

[node name="level_path_picker" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("1_gbbwo")]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
start_path = ""

[node name="HBoxContainer7" type="HBoxContainer" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer7"]
self_modulate = Color(0.791999, 0.791999, 0.791999, 1)
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Hidden"
clip_text = true
text_overrun_behavior = 3

[node name="level_hidden_input" type="CheckBox" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
self_modulate = Color(0.791999, 0.791999, 0.791999, 1)
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Show Loading Screen"
clip_text = true
text_overrun_behavior = 3

[node name="show_level_loading_screen_input" type="CheckBox" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer6" type="HBoxContainer" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer6"]
self_modulate = Color(0.791999, 0.791999, 0.791999, 1)
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Loading Screen Name"
clip_text = true
text_overrun_behavior = 3

[node name="loading_screen_label_dropdown" type="OptionButton" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
item_count = 2
popup/item_0/text = "loading_screen_1"
popup/item_0/id = 0
popup/item_1/text = "loading_screen_2"
popup/item_1/id = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
self_modulate = Color(0.791999, 0.791999, 0.791999, 1)
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Loading Screen Background"
clip_text = true
text_overrun_behavior = 3

[node name="loading_screen_background_picker" parent="Panel2/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer5" instance=ExtResource("2_6lqfa")]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10

[connection signal="pressed" from="HBoxContainer/save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="HBoxContainer/reset_button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="HBoxContainer/clear_button" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="HBoxContainer/set_default_button" to="." method="_on_set_default_button_pressed"]
